--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.24.4",
+        "@babel/preset-env": "^7.24.4",
         "@eslint/eslintrc": "^3.0.2",
         "@eslint/js": "^9.1.1",
+        "babel-loader": "^9.1.3",
         "css-loader": "^6.10.0",
         "eslint": "^8.57.0",
         "eslint-config-airbnb-base": "^15.0.0",
